Graph endpoint modified
Now fetched the latest 40 entries in reversed order

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
 			<artifactId>stomp-websocket</artifactId>
 			<version>2.3.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.2.3</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
